--- a/npm_phone.css
+++ b/npm_phone.css
@@ -153,7 +153,8 @@
 }
 /* footer  */
 .footer{
-    height: 570px;
+    height: 420px;
+    /* padding: 3px 140px; */
     padding: 3px 140px;
     flex-direction: column;
     flex-wrap: wrap;
@@ -172,4 +173,10 @@
 }
 .footer3{
     flex-direction: column;
+}
+.footeritem1{
+    font-size: 12px;
+}
+.footeritem4{
+    font-size: 10px;
 }
