--- a/npm_phone.css
+++ b/npm_phone.css
@@ -16,21 +16,8 @@
     padding: 0px 7px;
     padding-bottom: 12px;
 }
-/* #navbar2 .example a{
-    font-size: 1rem;
-    padding: 0px 7px;
-    padding-bottom: 12px;
-}
-#navbar2 .example .button4{
-    font-size: 13px;
-    padding: 4px 8px;
-    margin: 1px;
-}
-#navbar2 .button5{
-    font-size: 13px;
-    padding: 4px 8px;
-} */
-.topnav2 a{
+
+/* .topnav2 a{
     float: right;
     display: block;
     color: black;
@@ -38,21 +25,20 @@
     padding: 6px 8px;
     text-decoration: none;
     font-size: 10px;
+} */
+
+
+.search-bar-box{
+    display: flex;
+    flex-direction: column;
 }
-/* .topnav2 .search-container {
-    float: none;
-  }
-  .topnav2 a, .topnav2 input[type=text], .topnav2 .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .topnav2 input[type=text] {
-    border: 1px solid #ccc;  
-  } */
+.btn {
+    padding: 12px;
+    font-size: 12px;
+}
+.sign-btn{
+    padding: 12px;
+}
 /* section 2  */
 
 .sect2{
@@ -98,10 +84,17 @@
 }
 /* section 3  */
 .sect3{
-    height: 370px;
+    height: 470px;
     padding: 3px 68px;
     flex-direction: column;
 }
+.center {
+    display: block;
+    margin-top: 20px;
+    margin-left: 192px;
+    margin-right: 246px;
+    width: 10%;
+  }
 .sect3::before{
     height: 480px;
 }
@@ -153,7 +146,7 @@
 }
 /* footer  */
 .footer{
-    height: 420px;
+    height: 520px;
     /* padding: 3px 140px; */
     padding: 3px 140px;
     flex-direction: column;
@@ -165,6 +158,20 @@
 .footer::before{
     height: 480px;
 }
+.bothlogos{
+    display: flex;
+    flex-direction: row;
+    /* padding: 30px; */
+}
+.npmlogo{
+    padding-left: 20px;
+    padding-top: 5px;
+}
+.npmlogo img{
+    
+    height:80%;
+    width:40%;
+  }
 .footer1{
     flex-direction: column;
 }
