--- a/npm.css
+++ b/npm.css
@@ -37,7 +37,7 @@
     font-family: Arial, Helvetica, sans-serif;
   }
   
-  .topnav2 {
+  /* .topnav2 {
     overflow: hidden;
     background-color: #e9e9e9;
   }
@@ -65,7 +65,7 @@
   
   .topnav2 .search-container {
     float:left;
-    /* width: 70%; */
+ 
   }
   
   .topnav2 input[type=text] {
@@ -73,7 +73,7 @@
     margin-top: 8px;
     font-size: 17px;
     border: none;
-    /* width: 92.2%; */
+ 
 
   }
   
@@ -91,6 +91,85 @@
   
   .topnav2 .search-container button:hover {
     background: #ccc;
+  } */
+  .search-bar-box {
+    padding: 1rem 2rem;
+    display: flex;
+    gap: 1.5rem;
+    justify-content: center;
+    align-items: center;
+    max-width: 1530px;
+    margin: auto;
+  }
+  .logo {
+    cursor: pointer;
+    text-align: center;
+    width: 4rem;
+    min-width: 4rem;
+  }
+  .search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 20rem;
+    width: 100%;
+    height: 3rem;
+    background-color: rgb(240, 240, 240);
+    overflow: hidden;
+  }
+  .search-bar .search{
+    width: 100%;
+    height: inherit;
+    background-color: rgb(240, 240, 240);
+
+  }
+  .sign-box {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    color: black;
+  }
+  .sign-box .sign-up  {
+    border: 1px solid black;
+    
+  }
+  .sign-btn {
+    background: transparent;
+    font-weight: normal;
+    color: black;
+    padding: 2px;
+    min-width: 6rem;
+    margin: 2px;
+  }
+  .btn {
+    /* background: rgb(42, 42, 42); */
+    background: black;
+    color: white;
+    padding: 0.375rem 2rem;
+    display: inline-block;
+    /* transition: var(--transition); */
+    font-size: 0.875rem;
+    font-weight: bolder;
+    /* color: var(--clr-white); */
+    cursor: pointer;
+    height: 3rem;
+    border-style: none;
+    margin-left: auto;
+  }
+  .btn1 {
+    /* background: rgb(42, 42, 42); */
+    background: white;
+    color: black;
+    padding: 0.375rem 2rem;
+    display: inline-block;
+    /* transition: var(--transition); */
+    font-size: 0.875rem;
+    font-weight: 500;
+    /* color: var(--clr-white); */
+    cursor: pointer;
+    height: 3rem;
+    border-style: none;
+    margin-left: auto;
   }
   
 
@@ -158,13 +237,19 @@
   .sect3{
     display: flex;
     flex-direction: column;
-    height: 30rem;
+    height: 35rem;
     padding: 3px 300px;
     justify-content: center;    
     align-items: center;
     /* background-image: url('red_gradient.jpg'); */
     /* margin-top: 1.5rem; */
     background-color: white;
+  }
+  .center {
+    display: block;
+    margin-left: 12px;
+    margin-right: 246px;
+    width: 10%;
   }
   .container3{
     font-size: 3rem;
@@ -230,7 +315,7 @@
   /* footer  */
   .footer{
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr 2fr;
+    grid-template-columns:  1fr 2fr 2fr 2fr;
     /* display: flex;
     flex-direction: column; */
     height: 20rem;
@@ -242,9 +327,22 @@
     /* margin-top: 1.5rem; */
     border-top: 1px solid #a59d9d;
   }
-
+  .bothlogos{
+    display: flex;
+    flex-direction: column;
+    /* padding: 30px; */
+  }
+  .npmlogo{
+    padding-top: 20px;
+  }
+  .npmlogo img{
+    
+    height: 78%;
+    width: 30%;
+  }
   .footer1{
     display: grid;
+    padding-top: 30px;
     /* grid-template-columns: 2fr repeat(3); */
   }
   .footer2{
