--- a/npm.css
+++ b/npm.css
@@ -322,7 +322,7 @@
     padding: 3px 300px;
     justify-content: center;    
     align-items: center;
-    background-color: rgb(248, 249, 255);
+    background-color: white;
     /* background-image: url('red_gradient.jpg'); */
     /* margin-top: 1.5rem; */
     border-top: 1px solid #a59d9d;
