--- a/npm.css
+++ b/npm.css
@@ -37,61 +37,7 @@
     font-family: Arial, Helvetica, sans-serif;
   }
   
-  /* .topnav2 {
-    overflow: hidden;
-    background-color: #e9e9e9;
-  }
   
-  .topnav2 a {
-    float: right;
-    display: block;
-    color: rgb(19, 1, 1);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav2 a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav2 a.active {
-    background-color: #e9e9e9;
-    color: black;
-    border: 2px solid rgb(136, 127, 127);
-  }
-  
-  .topnav2 .search-container {
-    float:left;
- 
-  }
-  
-  .topnav2 input[type=text] {
-    padding: 6px;
-    margin-top: 8px;
-    font-size: 17px;
-    border: none;
- 
-
-  }
-  
-  .topnav2 .search-container button {
-    float: right;
-    padding: 6px;
-    margin-top: 8px;
-    margin-right: 16px;
-    background: black;
-    color: white;
-    font-size: 17px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .topnav2 .search-container button:hover {
-    background: #ccc;
-  } */
   .search-bar-box {
     padding: 1rem 2rem;
     display: flex;
@@ -174,13 +120,16 @@
   
 
   .sect2{
+    font-family: 'Arimo', sans-serif;
     display: flex;
     flex-direction: column;
     height: 50rem;
     padding: 3px 300px;
     justify-content: center;    
     align-items: center;
-    background-image: url('red25.jpg');
+    /* background-image: url('red25.jpg'); */
+    /* background-image: url('https://static.npmjs.com/abf53a31b2da4657a1a004ee9358551c.png'); */
+    background-image: linear-gradient( 270deg, rgba(176, 42, 42, .16) 0%, rgba(176, 42, 42, .56) 18.45%, rgba(176, 42, 42, .8) 49.67%, rgba(176, 42, 42, .56) 82.52%, rgba(176, 42, 42, .196364) 99.7%, rgba(189, 40, 40, 0) 99.71%, rgba(203, 56, 55, 0) 99.72%, rgba(203, 56, 55, .16) 99.73%), url(https://static.npmjs.com/abf53a31b2da4657a1a004ee9358551c.png);
     margin-top: 1.5rem;
   }
   .heading1{
@@ -224,7 +173,7 @@
   .button2{
     display: flex;
     margin: 4px;
-    background-color: rgb(182, 12, 77);
+    background-color: #cb3837;
     color: white;
     padding: 15px;
     border-radius: 2rem;
@@ -273,7 +222,8 @@
     padding: 3px 300px;
     justify-content: center;    
     align-items: center;
-    background-image: url('red25.jpg');
+    /* background-image: url('red25.jpg'); */
+    background-image: linear-gradient( 270deg, rgba(176, 42, 42, .16) 0%, rgba(176, 42, 42, .56) 18.45%, rgba(176, 42, 42, .8) 49.67%, rgba(176, 42, 42, .56) 82.52%, rgba(176, 42, 42, .196364) 99.7%, rgba(189, 40, 40, 0) 99.71%, rgba(203, 56, 55, 0) 99.72%, rgba(203, 56, 55, .16) 99.73%), url(https://static.npmjs.com/3dc2ca3d2e53fc894b904d917cf90015.png);
     /* margin-top: 1.5rem; */
     /* background-color: antiquewhite; */
   }
@@ -334,6 +284,7 @@
   }
   .npmlogo{
     padding-top: 20px;
+    /* width: 50px; */
   }
   .npmlogo img{
     
